--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <img id="logo" src="logo.png" alt="A logo that contains the word 'Git'" />
-    <h1>Git & GitHub Crash Course!</h1>
-    <p>Because the basics are important!</p>
+    <section>
+      <img id="logo" src="logo.png" alt="A logo that contains the word 'Git'" />
+      <h1>Git & GitHub Crash Course!</h1>
+      <p>Because the basics are important!</p>
 
-    <p>
-      Learn more about git in
-      <a href="https://acad.link/git">our course</a>
-    </p>
+      <p>
+        Learn more about git in
+        <a href="https://acad.link/git">our course</a>
+      </p>
+    </section>
   </body>
 </html>
